Cleanup and align with WildFly 33.0.1.Final