@@ -60,12 +60,9 @@
             -Djava.io.tmpdir=${basedir}/target
         </jvm.args.dirs>
         <jvm.args.ip>-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false</jvm.args.ip>
-        <jvm.args.ip.client>${jvm.args.ip}</jvm.args.ip.client>
         <jvm.args.ip.server>${jvm.args.ip}</jvm.args.ip.server>
-        <server.jvm.args>${surefire.system.args} ${jvm.args.ip.server} ${jvm.args.other} ${jvm.args.timeouts} -Dnode0=${node0} -Dnode1=${node1} -Dmcast=${mcast} -Dmcast.ttl=${mcast.ttl} ${jvm.args.dirs} ${extra.server.jvm.args}</server.jvm.args>
+        <server.jvm.args>${surefire.system.args} ${jvm.args.ip.server} ${jvm.args.other} ${jvm.args.timeouts} ${jvm.args.dirs} ${extra.server.jvm.args}</server.jvm.args>
         <jboss.args>-Dts.wildfly.version=${project.version}</jboss.args>
-        <!-- jboss.args is used in the arquillian.xml files, but wildfly-core DomainLifecycleUtil expects jboss.domain.server.args -->
-        <jboss.domain.server.args></jboss.domain.server.args>
 
         <!-- Additional JVM args, like those for EC2. -->
         <jvm.args.other>-server</jvm.args.other>
@@ -79,10 +76,9 @@
 
         <!-- Common surefire properties. -->
         <surefire.memory.args>-Xmx512m -XX:MetaspaceSize=128m</surefire.memory.args>
-        <surefire.jpda.args></surefire.jpda.args>
+        <surefire.jpda.args />
         <as.debug.port>8787</as.debug.port>
-        <modular.jdk.testsuite.args />
-        <surefire.system.args>${modular.jdk.testsuite.args} ${surefire.memory.args} ${surefire.jpda.args} -Djboss.dist=${jboss.dist}  -Dmaven.repo.local=${settings.localRepository}</surefire.system.args>
+        <surefire.system.args> ${surefire.memory.args} ${surefire.jpda.args} -Djboss.dist=${jboss.dist}  -Dmaven.repo.local=${settings.localRepository}</surefire.system.args>
         <extra.server.jvm.args />
         <!-- Hook to control forked process timeout via -D. Default value of 0 means no timeout -->
         <surefire.forked.process.timeout>0</surefire.forked.process.timeout>
@@ -91,14 +87,20 @@
         <org.wildfly.test.kill-servers-before-test>false</org.wildfly.test.kill-servers-before-test>
 
         <!-- Arquillian dependency versions -->
+        <version.org.jboss.arquillian>1.7.1.Final</version.org.jboss.arquillian>
+        <version.org.wildfly.arquillian>5.0.1.Final</version.org.wildfly.arquillian>
+
+        <surefire.system.args>-ea -Duser.region=US -Duser.language=en -XX:MaxMetaspaceSize=512m </surefire.system.args>
+        <server.jboss.args>--stability=preview</server.jboss.args>
+
+        <surefire.logmanager>org.jboss.logmanager.LogManager</surefire.logmanager>
+
+        <!-- Arquillian dependency versions -->
         <version.arquillian_wildfly>${project.parent.version}</version.arquillian_wildfly>
+        <thin.server.path>build/target/wildfly-vertx-build-${project.version}</thin.server.path>
 
         <!-- Don't try to deploy the testsuite modules because they don't build jars -->
         <maven.deploy.skip>true</maven.deploy.skip>
-
-        <!-- If containers based tests are mandatory to run -->
-        <container.tests.mandatory>false</container.tests.mandatory>
-
     </properties>
 
     <dependencyManagement>
@@ -107,6 +109,30 @@
                 <groupId>org.wildfly.extension.vertx</groupId>
                 <artifactId>wildfly-vertx-extension-testsuite-shared</artifactId>
                 <version>${project.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.arquillian</groupId>
+                <artifactId>wildfly-arquillian-container-managed</artifactId>
+                <version>${version.org.wildfly.arquillian}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.arquillian</groupId>
+                <artifactId>wildfly-arquillian-protocol-jmx</artifactId>
+                <version>${version.org.wildfly.arquillian}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.junit</groupId>
+                <artifactId>arquillian-junit-container</artifactId>
+                <version>${version.org.jboss.arquillian}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-testsuite-shared</artifactId>
+                <version>${version.org.wildfly}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -121,11 +147,16 @@
         <dependency>
             <groupId>org.wildfly.arquillian</groupId>
             <artifactId>wildfly-arquillian-container-managed</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly.arquillian</groupId>
+            <artifactId>wildfly-arquillian-container-managed</artifactId>
         </dependency>
 
         <dependency>
@@ -154,11 +185,6 @@
 
         <pluginManagement>
             <plugins>
-                <!--
-                   Sets general surefire system properties.
-                   These can be overridden by inheriting plugin configurations.
-                -->
-
                 <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
@@ -170,11 +196,10 @@
                            <jboss.dist>${jboss.dist}</jboss.dist>
                            <jboss.home>${basedir}/target/wildfly</jboss.home>
                            <jboss.args>${jboss.args}</jboss.args>
-                           <jboss.domain.server.args>${jboss.domain.server.args}</jboss.domain.server.args>
+                           <server.jboss.args>${server.jboss.args}</server.jboss.args>
                            <module.path>${jboss.dist}/modules${path.separator}${basedir}/target/modules</module.path>
                            <org.wildfly.test.kill-servers-before-test>${org.wildfly.test.kill-servers-before-test}</org.wildfly.test.kill-servers-before-test>
                        </systemPropertyVariables>
-                       <!-- Arquillian's config files. -->
                        <additionalClasspathElements combine.children="append">
                            <additionalClasspathElement>${basedir}/src/test/config/arq</additionalClasspathElement>
                        </additionalClasspathElements>
@@ -187,78 +212,4 @@
         </pluginManagement>
     </build>
 
-    <profiles>
-
-        <!--
-          Debugging profiles.
-        -->
-        <profile>
-            <id>debug.profile</id>
-            <activation><property><name>debug</name></property></activation>
-            <properties>
-                <surefire.jpda.args>-agentlib:jdwp=transport=dt_socket,address=${as.debug.port},server=y,suspend=y</surefire.jpda.args>
-            </properties>
-        </profile>
-
-        <!-- IPv6. Wildfly-2228. -->
-        <profile>
-            <id>ts.ipv6</id>
-            <activation><property><name>ipv6</name></property></activation>
-            <properties>
-                <jvm.args.ip>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</jvm.args.ip>
-
-                <!-- Override IPv4 defaults from the top. -->
-                <node0>::1</node0>
-                <node1>::1</node1>
-                <!-- Allow loopback to multicast -->
-                <!-- ip -6 route add table local local ff13::/16 dev lo metric 5 -->
-                <mcast>ff13::1</mcast>
-                <node0.escaped>[${node0}]</node0.escaped>
-
-                <!-- Override xsite IPv4 defaults from the top.  -->
-                <node2>::1</node2>
-                <node3>::1</node3>
-                <mcast1>ff13::2</mcast1>
-                <mcast2>ff13::3</mcast2>
-                <mcast3>ff13::4</mcast3>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <modular.jdk.testsuite.args>${modular.jdk.args}
-                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
-                    --add-opens=java.base/sun.security.validator=ALL-UNNAMED
-                    --add-exports=java.base/sun.security.validator=ALL-UNNAMED
-                    --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-                    --add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED
-                </modular.jdk.testsuite.args>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk-target</id>
-            <activation>
-                <jdk>[9,)</jdk>
-                <property>
-                    <name>jdk-release</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${version.compiler.plugin}</version>
-                        <configuration>
-                            <release>${jdk-release}</release>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-    </profiles>
 </project>
